# Fe2O3

./: .gitignore  Cargo.toml  README.md  future_features.md
data/: Cargo.toml  test2.nbt  test3.nbt
data/src/: lib.rs  network.rs  queue.rs  resource.rs  text.rs  transform.rs
data/src/nbt/: mod.rs  tag.rs
example-mod/: Cargo.toml
example-mod/src/: lib.rs
fe2o3-api/: Cargo.toml
fe2o3-api/src/: control.rs  lib.rs
fe2o3-api/src/experimental/: mod.rs
fe2o3_nbt/: Cargo.toml
fe2o3_nbt/src/: lib.rs  nbt.rs  tag.rs
mem-helper/: Cargo.toml
mem-helper/src/: lib.rs  to_f64.rs  to_u64.rs
packet/: Cargo.toml
packet-proc/: Cargo.toml
packet-proc/src/: handlers.rs  lib.rs
packet/src/: buffer.rs  deserializable.rs  lib.rs  serializable.rs  types.rs
protocol/: Cargo.toml
protocol/protocol_proc/: Cargo.toml
protocol/protocol_proc/src/: lib.rs
protocol/src/: lib.rs
protocol/src/data/: mod.rs  optional.rs  primitive.rs  variable.rs
protocol/src/packets/: mod.rs
shipyard-bus/: Cargo.toml
shipyard-bus/src/: bus.rs  lib.rs
src/: application.rs  async_task.rs  main.rs  settings.rs  status_tags.rs
src/game/: mod.rs
src/game/entities/: mod.rs  player.rs
src/game/world/: chunk.rs  heightmap.rs  mod.rs
src/networking/: chat.rs  mod.rs  player.rs  server.rs
src/networking/packet/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs  status_response_format.text
src/plugins/: mod.rs
src/workloads/: mod.rs  shutdown.rs  startup.rs  tick.rs
text-component/: Cargo.toml
text-component/src/: lib.rs
(+5 files in other folders)
