[package]
name = "Fe2O3"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["fe2o3_nbt", "mem-helper", "packet", "packet-proc", "text-component"]

[dependencies]
shipyard = "0.7.5"
uuid = "1.12.0"
packet = { path = "packet" }
packet-proc = { path = "packet-proc" }
json = "0.12.4"
tracing = {  version = "0.1.41" }
chrono = "0.4.38"
tracing-subscriber = { version = "0.3.19", features = ["default", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
fe2o3_nbt = { path = "fe2o3_nbt" }
flate2 = "1.0.35"
text-component = { path = "text-component" }
mem-helper = { path = "mem-helper" }
